Fix layout and spacing details throughout the page.

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -48,6 +48,16 @@
 
   .col-1-of-4 {
     width: calc((100% - #{$gutter-horizontal * 3}) / 4);
+    @include respond(tab-land) {
+      width: calc(2 * ((100% - #{$gutter-horizontal * 3}) / 4) + #{$gutter-horizontal});
+    }
+    &:nth-child(2) {
+      @media (max-width: 75em) and (min-width: 56.25em) {
+        float: right;
+        position: absolute;
+        right: -6rem;
+      }
+    }
   }
 
   .col-2-of-4 {
